fix: correctly show logo based on orientation and isCollapsed

--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -19,9 +19,9 @@
     @media (min-width: breakpoint.$desktop) {
       width: 5.1875rem;
 
-      .logo {
-        width: 1.4375rem;
-      }
+      // .logo {
+      //   width: 1.4375rem;
+      // }
     }
   }
 }
@@ -49,10 +49,31 @@
 }
 
 .logo {
-  width: 7.375rem;
+  @media (min-width: breakpoint.$desktop) {
+    margin: space.$s0 space.$s4;
+  }
+}
+
+.smallLogo {
+  width: 1.4375rem;
+  display: none;
 
   @media (min-width: breakpoint.$desktop) {
     margin: space.$s0 space.$s4;
+
+    &.isCollapsed {
+      display: block;
+    }
+  }
+}
+
+.largeLogo {
+  width: 7.375rem;
+
+  @media (min-width: breakpoint.$desktop) {
+    &.isCollapsed {
+      display: none;
+    }
   }
 }
 
